Layout fix alignment

--- a/bodystyles.css
+++ b/bodystyles.css
@@ -3,14 +3,3 @@
 body {
 	font-family: 'Open Sans', sans-serif;
 }
-
-object {
-	width: 100%;
-	height: 1000%;
-}
-
-.result > h2 {
-	font-family: 'Source Sans Pro', sans-serif;
-	font-size: 36px;
-	text-align: center;
-}
